--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-editraga ></app-shopping-editraga>
+    <app-shopping-edit></app-shopping-edit>
     <hr>
-    <ul>
-      <a href="list-group" class="list-group-item" style="cursor:pointer" 
-      *ngFor="let ingredient of ingredients">
-      {{ingredients.name}} ({{ingredient.amount}})
+    <ul class="list-group">
+      <a href="" class="list-group-item"
+        style="cursor:pointer"
+        *ngFor="let Ingredient of ingredients">
+        {{Ingredient.name}}({{Ingredient.amount}})
       </a>
     </ul>
-    <hr>
   </div>
 </div>
